update with Booking manager